Fix overflow and css

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,14 @@
 }
 
 .section{
+  background-color: #282c34;
   scroll-snap-align: start;
   border-right: 1px solid white;
   min-width: 100vw;
   height: 100vh;
   width: 100%;
   position: relative;
+  overflow: scroll;
 }
 
 .section.end{
