--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -2,7 +2,7 @@
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     display: flex;
-    min-height: 100vh;
+
     height: 100%;
 }
 
@@ -18,13 +18,14 @@
 
 .ContentContainer {
     background-color: #282c34;
-    min-height: 100vh;
+    max-height: 99vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+    overflow: hidden;
 }
 
 .About {
