--- a/src/views/sections/Home.css
+++ b/src/views/sections/Home.css
@@ -1,15 +1,14 @@
 .App-header {
     background-color: #282c34;
-    min-height: 100vh;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     font-size: calc(10px + 2vmin);
     color: white;
+    overflow: hidden;
 }
-
-
 
 .arrows {
     width: 60px;
